Update docker file

--- a/qr_server/Dockerfile
+++ b/qr_server/Dockerfile
@@ -1,17 +1,22 @@
-# Start with your base image
 FROM python:3.11-slim
 
-# Install the updated OpenGL dependency
-RUN apt-get update && apt-get install -y libgl1 && rm -rf /var/lib/apt/lists/*
-
-# Set the working directory
-WORKDIR /app
-
-# Copy the application code
-COPY . /app
+# Install system dependencies for OpenCV
+RUN apt-get update && apt-get install -y \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgl1 \
+ && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Run the application
+# Copy app
+COPY . /app
+WORKDIR /app
+# Expose the port the app runs on
+EXPOSE 5000
+
 CMD ["python", "qr_server.py"]
