--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       context: ./qr_server
     ports:
       - "5000:5000"
+    devices:
+      - "/dev/video0:/dev/video0"   # ✅ Give container access to the host camera
     restart: unless-stopped
 
 volumes:
