--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - "5000:5000"
     devices:
       - "/dev/video0:/dev/video0"   # ✅ Give container access to the host camera
+      - "/dev/ttyS0:/dev/ttyS0"
     restart: unless-stopped
 
 volumes:
