--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     devices:
       - "/dev/video0:/dev/video0"   # ✅ Give container access to the host camera
       - "/dev/ttyS0:/dev/ttyS0"
+    volumes:
+      - ./qr_server/output:/app/output   # ✅ Map local folder -> container folder
     restart: unless-stopped
 
 volumes:
