--- a/qr_server/requirements.txt
+++ b/qr_server/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
 opencv-python
-# qreader==3.16.0
+qreader==3.16.0
 numpy==1.26.0
 pyserial==3.5
-pyzbar==0.1.9
+# pyzbar==0.1.9
 psycopg2-binary
